--- a/css/_thanks.scss
+++ b/css/_thanks.scss
@@ -96,3 +96,9 @@ Thanksページ
         }
     }
 }
+
+.gradientBackground{
+    width: 100%;
+    height: 150px;
+    background: linear-gradient(0deg, rgba(255,219,196,1) 0%, rgba(255,219,196,0) 100%);
+}
