--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -114,3 +114,8 @@ contact ページ
     }
 }
 
+.gradientBackground{
+    width: 100%;
+    height: 150px;
+    background: linear-gradient(0deg, rgba(255,219,196,1) 0%, rgba(255,219,196,0) 100%);
+}
