--- a/css/_header.scss
+++ b/css/_header.scss
@@ -40,7 +40,7 @@
             width: 148px;
 
             @include media(xl){
-                width: 121px;
+                width: 125px;
                 padding-top: 5px;
                 position: relative;
                 z-index: 99;
@@ -140,6 +140,7 @@
     
     @include media(xl){
         display: block;
+        top:16px
     }// 1000pxを下回るとハンバーガーメニューにする
     
 }
@@ -237,17 +238,14 @@
     padding-bottom: 52px;
     opacity: 1; // 不透明に
     z-index: 3; // 最前面に
-    background: rgba(255,229,213,0.8);
+    background: rgba(255,229,213,0.9);
     border-radius: 0px 0px 20px 20px;
     transition: 0.7s;
 
     @include media(xl){
         width: 100%;
-    }
-
-    @include media(xl){
-        width: 100%;
         height: 100vh;
+        padding-top: 130px;
     }
 
 
