--- a/css/_variable.scss
+++ b/css/_variable.scss
@@ -9,7 +9,8 @@ color
 // $background-color: FFF7EF;
 
 // テキストカラー
-$text-color: #73524F;
+$text-color: #5E2F2A;
+// $text-color: #73524F;
 // $text-color: #6A4745;
 
 // アクセントカラー
