--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ color
   display: inline-block;
   position: relative;
   padding: 1em 80px 1em 0em;
-  color: #73524F;
+  color: #5E2F2A;
   font-size: 16px;
   font-weight: normal;
   transition: 0.3s;
@@ -71,8 +71,8 @@ color
   transform: translateY(-50%) rotate(45deg);
   width: 5px;
   height: 5px;
-  border-top: 1px solid #73524F;
-  border-right: 1px solid #73524F;
+  border-top: 1px solid #5E2F2A;
+  border-right: 1px solid #5E2F2A;
   transition: 0.3s;
 }
 @media screen and (max-width: 870px) {
@@ -135,7 +135,7 @@ color
 }
 .page__link .page__item a {
   padding-left: 8px;
-  color: #73524F;
+  color: #5E2F2A;
   text-decoration: none;
   transition: 0.3s;
 }
@@ -216,7 +216,7 @@ color
   padding-left: 20px;
 }
 .btn-arrow a {
-  color: #73524F;
+  color: #5E2F2A;
   text-decoration: none;
   transition: 0.3s;
 }
@@ -349,7 +349,7 @@ li {
   padding: 0;
   line-height: 1;
   /*デフォルトの文字色、font-familyを予め当てておく*/
-  color: #73524F;
+  color: #5E2F2A;
   font-family: "fot-tsukuardgothic-std", sans-serif, "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
   font-feature-settings: "palt";
 }
@@ -359,7 +359,7 @@ h2, h3 {
 }
 
 a {
-  color: #73524F;
+  color: #5E2F2A;
   font-family: "fot-tsukuardgothic-std", sans-serif, "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
   /*下線を消す*/
   text-decoration: none;
@@ -530,7 +530,7 @@ body {
   display: inline-block;
   width: 48px;
   height: 1px;
-  background: #73524F;
+  background: #5E2F2A;
 }
 @media screen and (max-width: 767px) {
   .section__title::before {
@@ -636,8 +636,8 @@ body {
   display: block;
   width: 11px;
   height: 11px;
-  border-top: 2px solid #73524F; /*矢印の色*/
-  border-right: 2px solid #73524F; /*矢印の色*/
+  border-top: 2px solid #5E2F2A; /*矢印の色*/
+  border-right: 2px solid #5E2F2A; /*矢印の色*/
   position: absolute; /*絶対配置にする*/
 }
 
@@ -842,7 +842,7 @@ body {
   position: absolute;
   width: 100%;
   height: 1px;
-  background: #73524F;
+  background: #5E2F2A;
   transition: all 0.4s;
 }
 .menu_btn span:nth-of-type(1) {
@@ -910,7 +910,7 @@ body {
   opacity: 1; /*不透明にして出現*/
   top: 0;
   left: 0;
-  background: #73524F;
+  background: #5E2F2A;
 }
 
 /*.doneクラスがついたヘッダーのテキストナビゲーションの形状*/
@@ -1425,7 +1425,7 @@ contact ページ
 .service__label {
   padding: 5px 24px;
   line-height: 1;
-  color: #73524F;
+  color: #5E2F2A;
   background-color: #FFFBF9;
   border: 1px solid #FFBE98;
   border-radius: 32px;
@@ -1683,7 +1683,7 @@ worksページ
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #73524F;
+  color: #5E2F2A;
   line-height: 1.5;
 }
 .website__img p.caption span.title {
@@ -1794,7 +1794,7 @@ worksページ
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #73524F;
+  color: #5E2F2A;
   line-height: 1.5;
 }
 .banner__img p.caption span.title {
@@ -1905,7 +1905,7 @@ worksページ
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #73524F;
+  color: #5E2F2A;
   line-height: 1.5;
 }
 .graphic__img p.caption span.title {
@@ -2108,7 +2108,7 @@ works/下層ページ
   display: inline-block;
   padding: 6px 24px;
   margin-bottom: 5px;
-  color: #73524F;
+  color: #5E2F2A;
   background-color: #FFFBF9;
   border: 1px solid #FFBE98;
   border-radius: 32px;
@@ -3197,7 +3197,7 @@ messageページ
   display: block;
   text-align: center;
   position: absolute;
-  top: 45%;
+  top: 47%;
   left: 50%;
   transform: translate(-50%, -50%);
   animation-name: fadeInAnime;
@@ -3295,6 +3295,7 @@ messageページ
   right: 10%;
   bottom: 8%;
   z-index: 1;
+  overflow: hidden;
 }
 @media screen and (max-width: 1000px) {
   .fv__maincopy {
@@ -3407,7 +3408,7 @@ messageページ
 .fv__nav ul li a {
   display: inline-block;
   margin: 0 auto;
-  color: #73524F;
+  color: #5E2F2A;
   padding: 8px;
   margin-bottom: 10px;
 }
@@ -3699,7 +3700,7 @@ works
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #73524F;
+  color: #5E2F2A;
   line-height: 1.5;
 }
 .works__img p.caption span.title {
@@ -3734,7 +3735,7 @@ works
 .works__label {
   padding: 6px 24px;
   line-height: 1;
-  color: #73524F;
+  color: #5E2F2A;
   background-color: #FFFBF9;
   border: 1px solid #FFBE98;
   border-radius: 32px;
