--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -80,15 +80,15 @@ img {
     }
 }
 
-@media (hover: hover) and (pointer: fine) {//ホバーアクションをPCだけにする
-a:hover {
-    opacity: 0.7
-}
-}
+// @media (hover: hover) and (pointer: fine) {//ホバーアクションをPCだけにする
+// a:hover {
+//     opacity: 0.7
+// }
+// }
 
-//IE11用に以下のコードも追加
-@media (-ms-high-contrast: none), (-ms-high-contrast: active) {
-a:hover {
-    opacity: 0.7
-}
-}
+// //IE11用に以下のコードも追加
+// @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
+// a:hover {
+//     opacity: 0.7
+// }
+// }
