--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -308,6 +308,7 @@
         border-radius: 10px;
         border: 1px solid variable.$pink-beige;
         background: variable.$cream-beige;
+        color: variable.$text-color;
         font-family: variable.$ff-gothic;
 
     .send__img {
