--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,7 @@ color
   border-radius: 10px;
   border: 1px solid #FFE9D8;
   background: #FFFBF9;
+  color: #5E2F2A;
   font-family: "fot-tsukuardgothic-std", sans-serif, "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
 }
 .inquire .btn__area .submit-btn .send__img {
