--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -310,6 +310,7 @@
         background: variable.$cream-beige;
         color: variable.$text-color;
         font-family: variable.$ff-gothic;
+        font-weight: normal;
 
     .send__img {
         width: 17px;
