--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -75,11 +75,17 @@
     &:hover::before {
         background: rgb(255,190,152);
         background: linear-gradient(90deg, rgba(255,190,152,1) 0%, rgba(251,222,215,1) 100%);
+        @include media(md){
+            display: none;
+        }
     }
 
     &:hover::after {
         border-top: 1px solid variable.$cream-beige ;
         border-right: 1px solid variable.$cream-beige;
+        @include media(md){
+            display: none;
+        }
     }
     }
 }
@@ -310,7 +316,7 @@
         background: variable.$cream-beige;
         color: variable.$text-color;
         font-family: variable.$ff-gothic;
-        font-weight: normal;
+        font-weight: 100;
 
     .send__img {
         width: 17px;
