--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,19 @@ color
   background: rgb(255, 190, 152);
   background: linear-gradient(90deg, rgb(255, 190, 152) 0%, rgb(251, 222, 215) 100%);
 }
+@media screen and (max-width: 767px) {
+  .btn-circle a:hover::before {
+    display: none;
+  }
+}
 .btn-circle a:hover::after {
   border-top: 1px solid #FFFBF9;
   border-right: 1px solid #FFFBF9;
+}
+@media screen and (max-width: 767px) {
+  .btn-circle a:hover::after {
+    display: none;
+  }
 }
 
 /*worksと実績詳細ページの丸ボタンは中央に配置 */
@@ -300,6 +310,7 @@ color
   background: #FFFBF9;
   color: #5E2F2A;
   font-family: "fot-tsukuardgothic-std", sans-serif, "游明朝", YuMincho, "Hiragino Mincho ProN W3", "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝", "ＭＳ 明朝", serif;
+  font-weight: 100;
 }
 .inquire .btn__area .submit-btn .send__img {
   width: 17px;
@@ -1665,6 +1676,11 @@ worksページ
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
+@media screen and (max-width: 767px) {
+  .website__img:hover img {
+    display: none;
+  }
+}
 .website__img p.caption {
   position: absolute;
   width: 80%;
@@ -1689,6 +1705,11 @@ worksページ
 .website__img:hover p.caption {
   opacity: 1;
 }
+@media screen and (max-width: 767px) {
+  .website__img:hover p.caption {
+    display: none;
+  }
+}
 .website .website__img:hover .mask::before {
   content: "";
   position: absolute;
@@ -1699,6 +1720,11 @@ worksページ
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   background: rgba(255, 255, 255, 0.7);
+}
+@media screen and (max-width: 767px) {
+  .website .website__img:hover {
+    display: none;
+  }
 }
 
 /*バナー制作*/
@@ -1776,6 +1802,11 @@ worksページ
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
+@media screen and (max-width: 767px) {
+  .banner__img:hover img {
+    display: none;
+  }
+}
 .banner__img p.caption {
   position: absolute;
   width: 80%;
@@ -1800,6 +1831,11 @@ worksページ
 .banner__img:hover p.caption {
   opacity: 1;
 }
+@media screen and (max-width: 767px) {
+  .banner__img:hover p.caption {
+    display: none;
+  }
+}
 .banner .banner__img:hover .mask::before {
   content: "";
   position: absolute;
@@ -1810,6 +1846,11 @@ worksページ
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   background: rgba(255, 255, 255, 0.7);
+}
+@media screen and (max-width: 767px) {
+  .banner .banner__img:hover {
+    display: none;
+  }
 }
 
 /*チラシ・名刺*/
@@ -1887,6 +1928,11 @@ worksページ
   border-radius: 10px;
   transform: scale(1.1); /*拡大の値*/
 }
+@media screen and (max-width: 767px) {
+  .graphic__img:hover img {
+    display: none;
+  }
+}
 .graphic__img p.caption {
   position: absolute;
   width: 80%;
@@ -1911,6 +1957,11 @@ worksページ
 .graphic__img:hover p.caption {
   opacity: 1;
 }
+@media screen and (max-width: 767px) {
+  .graphic__img:hover p.caption {
+    display: none;
+  }
+}
 .graphic .graphic__img:hover .mask::before {
   content: "";
   position: absolute;
@@ -1921,6 +1972,11 @@ worksページ
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   background: rgba(255, 255, 255, 0.7);
+}
+@media screen and (max-width: 767px) {
+  .graphic .graphic__img:hover {
+    display: none;
+  }
 }
 @media screen and (max-width: 767px) {
   .graphic .work__btn {
