--- a/css/_header.scss
+++ b/css/_header.scss
@@ -225,7 +225,7 @@
     // align-items: center;
     text-align: center; 
     // opacity: 0;
-    transition: 0.3s;
+    // transition: 0.3s;
 }
 
 //   *メニューボタンをクリックした際に付与されるpanelactiveクラスがついたナビゲーションの形状*/
